# ludi

./: .env  .gitignore  MIT  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
src/: App.tsx  lib.tsx
src/components/: LocalFaucet.tsx  Wallet.tsx  gamble.tsx  stake.tsx
src/pages/: home.tsx  testing.tsx
src/sway-api/: contract-ids.json
src/sway-api/contracts/: LudiContract.ts  LudiContractFactory.ts  VrfImpl.ts  VrfImplFactory.ts  common.d.ts  index.ts
src/sway-api/predicates/: TestPredicateLoader.ts  index.ts
src/sway-api/scripts/: TestScriptLoader.ts  index.ts
sway-programs/contract/: Cargo.toml  Forc.toml
sway-programs/contract/src/: error.sw  main.sw
sway-programs/contract/tests/: harness.rs
