[package]
name = "ludi"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Hemanth Krishna <hkpdev008@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.1"
tokio = { version = "1.12", features = ["rt", "macros"] }
orao-fuel-vrf = { version = "0.2.0" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
